--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bakery-inventory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bmwells-afk.github.io/Bakery-Inventory/"
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
