--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "bakery-inventory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bmwells-afk.github.io/Bakery-Inventory/"
-  "dependencies": {
+  "homepage": "https://bmwells-afk.github.io/Bakery-Inventory/",
+  "dependencies": 
+  {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
